tests/baselines/reference/functionOverloads11.errors.txt
tests/cases/compiler/functionOverloads11.ts(1,1): error TS2394: Overload signature is not compatible with function implementation.


==== tests/cases/compiler/functionOverloads11.ts (1 errors) ====
    function foo():number;
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
    function foo():string { return "" }
    